--- a/site/index.html
+++ b/site/index.html
@@ -3,16 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome</title>
+    <title>Mohammad Hasibul Hasan</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-</head>
-<body>
-    <h1>Hasibul Hasan</h1>
-
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/preloader.css">
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+</head>
+<body>
+
+
+
+    <section class="container-12" id="nav-bar">
+        <nav class="navbar navbar-expand-lg navbar-dark ">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">HOME</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">ABOUT</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">SKILL</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="#">EXPERIENCES</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="#">PROJECT</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="#">PRICING</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="#">REVIEW</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="#">CONTACT</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </section>
+    <section class="container-12" id="menu">
+        <p>kshgusgvjdfhvdf kshvjbvziikhjgfh kfshkf </p>
+    </section>
+
+    
+
+
 </body>
 </html>
