--- a/site/index.html
+++ b/site/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta content="text/html; charset=iso-8859-2" http-equiv="Content-Type">
     <title>Mohammad Hasibul Hasan</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -13,7 +14,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </head>
-<body>
+<body class="container-sm-12">
 
 
 
@@ -53,8 +54,17 @@
             </div>
         </nav>
     </section>
+
+    <!-----Home-------->
     <section class="container-12" id="menu">
-        <p>kshgusgvjdfhvdf kshvjbvziikhjgfh kfshkf </p>
+        <div class="row">
+            <div class="col-6">
+                <h1 class="pl-5">Hi &#44</h1>
+            </div>
+            <div class="col-5">
+                <img src="img/p1.jpg" class="rounded-circle mx-auto d-block" > 
+            </div>
+        </div>
     </section>
 
     
