--- a/site/index.html
+++ b/site/index.html
@@ -14,18 +14,18 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </head>
-<body class="container-sm-12">
+<body>
 
 
 
-    <section class="container-12" id="nav-bar">
+    <section id="nav-bar">
         <nav class="navbar navbar-expand-lg navbar-dark ">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
+                <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="#">HOME</a>
                     </li>
@@ -56,19 +56,35 @@
     </section>
 
     <!-----Home-------->
-    <section class="container-12" id="menu">
+    <section  id="menu">
+    <div class="container">
         <div class="row">
-            <div class="col-6">
-                <h1 class="pl-5">Hi &#44</h1>
+            <div class="col-sm-8">
+                <h1 class="ml-5 badge ">
+                    <span class="text-wrapper">
+                        <span class="line line1"></span>
+                        <span class="letters">Hello I&#39;m</span>
+                      </span>
+                      
+                </h1>
+                <p class="pl-5 ml14">
+                    <span class="text-wrapper">
+                        <span class="letters">Mohammad Hasibul Hasan</span>
+                        <span class="line"></span>
+                      </span>
+                </p>
             </div>
-            <div class="col-5">
-                <img src="img/p1.jpg" class="rounded-circle mx-auto d-block" > 
+            <div class="col-sm-4">
+                <img src="img/p1.jpg" class="rounded-circle " > 
             </div>
         </div>
+    </div>
     </section>
 
     
 
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+<script src="js/animation.js"></script>
+<script src="js/animation1.js"></script>
 </body>
 </html>
