--- a/site/index.html
+++ b/site/index.html
@@ -111,6 +111,45 @@
                         </div>
                     </div>
                  
+                    <div class="swiper-slide" >
+                        <div class="Course-img">
+                            <img src="img/C2.jpg">
+                            <div class="Course-details">
+                                <h6>Academy : a2i</h6>
+                                <h5>Course Name : Corona Virus Disease (COVID-19)</h5>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="swiper-slide" >
+                        <div class="Course-img">
+                            <img src="img/C2.jpg">
+                            <div class="Course-details">
+                                <h6>Academy : a2i</h6>
+                                <h5>Course Name : Corona Virus Disease (COVID-19)</h5>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="swiper-slide" >
+                        <div class="Course-img">
+                            <img src="img/C2.jpg">
+                            <div class="Course-details">
+                                <h6>Academy : a2i</h6>
+                                <h5>Course Name : Corona Virus Disease (COVID-19)</h5>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="swiper-slide" >
+                        <div class="Course-img">
+                            <img src="img/C2.jpg">
+                            <div class="Course-details">
+                                <h6>Academy : a2i</h6>
+                                <h5>Course Name : Corona Virus Disease (COVID-19)</h5>
+                            </div>
+                        </div>
+                    </div>
 
                 </div>
                 <!-- Add Pagination -->
@@ -132,9 +171,9 @@
       centeredSlides: true,
       slidesPerView: 'auto',
       coverflowEffect: {
-        rotate: 50,
+        rotate: 60,
         stretch: 0,
-        depth: 100,
+        depth: 400,
         modifier: 1,
         slideShadows: true,
       },
