--- a/site/index.html
+++ b/site/index.html
@@ -123,30 +123,30 @@
 
                     <div class="swiper-slide" >
                         <div class="Course-img">
-                            <img src="img/C2.jpg">
+                            <img src="img/C3.jpg">
                             <div class="Course-details">
-                                <h6>Academy : a2i</h6>
-                                <h5>Course Name : Corona Virus Disease (COVID-19)</h5>
+                                <h6>Academy : IBM, Coursera.org</h6>
+                                <h5>Course Name : Data Science Methology</h5>
                             </div>
                         </div>
                     </div>
 
                     <div class="swiper-slide" >
                         <div class="Course-img">
-                            <img src="img/C2.jpg">
+                            <img src="img/C4.jpg">
                             <div class="Course-details">
-                                <h6>Academy : a2i</h6>
-                                <h5>Course Name : Corona Virus Disease (COVID-19)</h5>
+                                <h6>Academy : IBM, Coursera.org</h6>
+                                <h5>What Is Data Science</h5>
                             </div>
                         </div>
                     </div>
 
                     <div class="swiper-slide" >
                         <div class="Course-img">
-                            <img src="img/C2.jpg">
+                            <img src="img/C5.jpg">
                             <div class="Course-details">
-                                <h6>Academy : a2i</h6>
-                                <h5>Course Name : Corona Virus Disease (COVID-19)</h5>
+                                <h6>Academy : IBM, Coursera.org</h6>
+                                <h5>Course Name : Tools For Data Science</h5>
                             </div>
                         </div>
                     </div>
