--- a/site/index.html
+++ b/site/index.html
@@ -66,16 +66,26 @@
                     <span class="text-wrapper">
                         <span class="line line1"></span>
                         <span class="letters">Hello I&#39;m</span>
-                      </span>
-                      
+                      </span>      
                 </h1>
-                <p class="pl-5 ml14">
+                <div class="pl-5 ml14">
                     <span class="text-wrapper">
                         <span class="letters">Mohammad Hasibul Hasan</span>
                         <span class="line"></span>
                       </span>
-                </p>
-                <h4 class="pl-5">Web Developer, Machine Learning Researcher &amp; UiUx Designer</h4>
+                </div>
+                <h4 class="pl-5">Web Developer, Machine Learning Researcher &amp; UiUx Designer </h4>
+                <br>
+                <div id="mail">
+                    <p><img id="contact-icon" src="img/icons8-important-mail-96(1).png">hasibulhasan442@gmail.com</p>
+                </div>
+                <div id="phone">
+                    <p><img id="contact-icon" src="img/icons8-google-mobile-96.png">(+880)1770489990</p>
+                </div>
+                <div id="location">
+                    <p><img id="contact-icon" src="img/icons8-user-location-90.png">
+                        hasibulhasan442@gmail.com</p>
+                </div>
             </div>
             <div class="col-sm-4">
                 <img src="img/p1.jpg" class="rounded-circle " > 
