--- a/site/index.html
+++ b/site/index.html
@@ -5,16 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="text/html; charset=iso-8859-2" http-equiv="Content-Type">
     <title>Mohammad Hasibul Hasan</title>
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css" integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous">
     <link rel="stylesheet" href="css/swiper.min.css">
     <link rel="stylesheet" href="css/style.css">
-
     <link rel="stylesheet" href="css/animation.css">
 
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
 </head>
 <body>
 
@@ -74,17 +76,17 @@
                         <span class="line"></span>
                       </span>
                 </div>
+                <br>
                 <h4 class="pl-5">Web Developer, Machine Learning Researcher &amp; UiUx Designer </h4>
                 <br>
-                <div id="mail">
-                    <p><img id="contact-icon" src="img/icons8-important-mail-96(1).png">hasibulhasan442@gmail.com</p>
+                <div id="mail" class="ml-5">
+                    <p><i id="contact-icon" class="fas fa-envelope"></i>&nbsp;&nbsp;hasibulhasan442&#64;gmail&#46;com</p>
                 </div>
-                <div id="phone">
-                    <p><img id="contact-icon" src="img/icons8-google-mobile-96.png">(+880)1770489990</p>
+                <div id="phone"class="ml-5">
+                    <p><i id="contact-icon" class="fas fa-mobile-alt"></i>&nbsp;&nbsp;&#40;&#43;880&#41;1770489990</p>
                 </div>
-                <div id="location">
-                    <p><img id="contact-icon" src="img/icons8-user-location-90.png">
-                        hasibulhasan442@gmail.com</p>
+                <div id="location"class="ml-5">
+                    <p><i id="contact-icon" class="fas fa-map-marker-alt"></i>&nbsp;&nbsp;Shamoly, Dhaka, Bangladesh</p>
                 </div>
             </div>
             <div class="col-sm-4">
