--- a/site/index.html
+++ b/site/index.html
@@ -78,6 +78,7 @@
                 </div>
                 <br>
                 <h4 class="pl-5">Web Developer, Machine Learning Researcher &amp; UiUx Designer </h4>
+                
                 <br>
                 <div id="mail" class="ml-5">
                     <p><i id="contact-icon" class="fas fa-envelope"></i>&nbsp;&nbsp;hasibulhasan442&#64;gmail&#46;com</p>
@@ -88,9 +89,28 @@
                 <div id="location"class="ml-5">
                     <p><i id="contact-icon" class="fas fa-map-marker-alt"></i>&nbsp;&nbsp;Shamoly, Dhaka, Bangladesh</p>
                 </div>
+                <br>
+
+                <div class="middle ml-5">
+                    <a class="btn btn-outline-primary " href="#">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a class="btn btn-outline-primary ml-3" href="#">
+                        <i class="fab fa-github"></i>
+                    </a>
+                    <a class="btn btn-outline-primary ml-3" href="#">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                    <a class="btn btn-outline-primary ml-3" href="#">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a class="btn btn-outline-primary ml-3" href="#">
+                        <i class="fab fa-behance"></i>
+                    </a>
+                </div>
             </div>
             <div class="col-sm-4">
-                <img src="img/p1.jpg" class="rounded-circle " > 
+                <img src="img/p1.jpg" class="rounded-circle mx-auto" > 
             </div>
         </div>
     </div>
