--- a/site/index.html
+++ b/site/index.html
@@ -72,15 +72,15 @@
 
     <!-----Home-------->
     <section id="menu">
-      <div class="container" ng-controller="mycontroller">
+      <div class="container" >
         <div class="row">
           <div class="col-sm-8">
-            <h1 class="ml-5 badge ">
+            <h2 class="ml-5 badge ">
               <span class="text-wrapper">
                 <span class="line line1"></span>
                 <span class="letters">Hello I&#39;m</span>
               </span>
-            </h1>
+            </h2>
             <div class="pl-5 ml14">
               <span class="text-wrapper">
                 <span class="letters">Mohammad Hasibul Hasan</span>
@@ -145,7 +145,7 @@
 
     <!-- certificate-->
     <section id="Course">
-      <div class="container">
+      <div class="container-fluid">
         <h1>COURSES</h1>
         <div class="swiper-container">
           <div class="swiper-wrapper">
@@ -217,7 +217,8 @@
     
     <!-- ---------------------Skills----------------- -->
     <section id="skills">
-      <div class="container">
+      <div class="container-fluid pt-4">
+        <h1>SKILLS</h1>
         <div class="row">
 
           <div class="col-sm-6">
