--- a/site/index.html
+++ b/site/index.html
@@ -2,13 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"
+    />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="HandheldFriendly" content="true" />
+    <meta charset="utf-8" />
+    <meta name="description" content="My Web Page" />
+    <meta name="author" content="Mohammad Hasibul Hasan" />
     <meta content="text/html; charset=iso-8859-2" http-equiv="Content-Type" />
     <title>Mohammad Hasibul Hasan</title>
 
     <link
       rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
     <link
       rel="stylesheet"
@@ -20,14 +28,16 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/animation.css" />
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-circle-progress/1.2.0/circle-progress.min.js"></script>
   </head>
   <body>
     <section id="nav-bar">
-      <nav class="container-sm-12 navbar navbar-expand-lg navbar-dark ">
+      <nav class=" navbar navbar-expand-lg navbar-dark ">
         <button
           class="navbar-toggler"
           type="button"
@@ -72,7 +82,7 @@
 
     <!-----Home-------->
     <section id="menu">
-      <div class="container" >
+      <div class="container">
         <div class="row">
           <div class="col-sm-8">
             <h2 class="ml-5 badge ">
@@ -111,24 +121,39 @@
                 >&nbsp;&nbsp;Shamoly, Dhaka, Bangladesh
               </p>
             </div>
-            <br />
+          </br>
 
             <div class="middle">
               <div class="row ml-5">
                 <div class="col-sm-10">
-                  <a class="btn btn-outline-primary mr-1 pb-2 border-0" href="#">
+                  <a
+                    class="btn btn-outline-light mr-1 pb-2 border-0"
+                    href="#"
+                  >
                     <i class="fab fa-facebook-f"></i>
                   </a>
-                  <a class="btn btn-outline-primary mr-1 pb-2 border-0" href="#">
+                  <a
+                    class="btn btn-outline-light mr-1 pb-2 border-0"
+                    href="#"
+                  >
                     <i class="fab fa-github"></i>
                   </a>
-                  <a class="btn btn-outline-primary mr-1 pb-2 border-0" href="#">
+                  <a
+                    class="btn btn-outline-light mr-1 pb-2 border-0"
+                    href="#"
+                  >
                     <i class="fab fa-linkedin"></i>
                   </a>
-                  <a class="btn btn-outline-primary mr-1 pb-2 border-0" href="#">
+                  <a
+                    class="btn btn-outline-light mr-1 pb-2 border-0"
+                    href="#"
+                  >
                     <i class="fab fa-instagram"></i>
                   </a>
-                  <a class="btn btn-outline-primary mr-1 pb-2 border-0" href="#">
+                  <a
+                    class="btn btn-outline-light mr-1 pb-2 border-0"
+                    href="#"
+                  >
                     <i class="fab fa-behance"></i>
                   </a>
                 </div>
@@ -145,7 +170,7 @@
 
     <!-- certificate-->
     <section id="Course">
-      <div class="container-fluid">
+      <div class="container-md-12">
         <h1>COURSES</h1>
         <div class="swiper-container">
           <div class="swiper-wrapper">
@@ -214,35 +239,67 @@
         </div>
       </div>
     </section>
-    
+
     <!-- ---------------------Skills----------------- -->
-    <section id="skills">
-      <div class="container-fluid pt-4">
-        <h1>SKILLS</h1>
+    <section class="skills">
+      <div class="container pt-4"> 
         <div class="row">
-
           <div class="col-sm-6">
+            <h3>Technical Skills</h3>
             <div class="progress">
-              <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75"
-                aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+              <div
+                class="progress-bar progress-bar-striped progress-bar-animated"
+                role="progressbar"
+                aria-valuenow="75"
+                aria-valuemin="0"
+                aria-valuemax="100"
+                style="width: 75%"
+              ></div>
             </div>
           </div>
-
           <div class="col-sm-6">
-            <div class="progress">
-              <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75"
-                aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+            <h3>Professional Skills</h3>
+            <div class="row">
+              <div class="col-sm-6">
+                <div class="round" data-value=".90" data-size="100" data-thickness="6">
+                  <strong></strong>
+                  <span><i class="fas fa-code"></i>Development</span>
+                </div>
+              </div>
+              <div class="col-sm-6">
+                <div class="round" data-value=".90" data-size="100" data-thickness="6">
+                  <strong></strong>
+                  <span><i class="fas fa-code"></i>Development</span>
+                </div>
+              </div>
+              <div class="col-sm-6">
+                <div class="round" data-value=".90" data-size="100" data-thickness="6">
+                  <strong></strong>
+                  <span><i class="fas fa-code"></i>Development</span>
+                </div>
+              </div>
+              <div class="col-sm-6">
+                <div class="round" data-value=".90" data-size="100" data-thickness="6">
+                  <strong></strong>
+                  <span><i class="fas fa-code"></i>Development</span>
+                </div>
+              </div>
             </div>
           </div>
-
         </div>
       </div>
     </section>
 
+    <script src="js/circle.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/swiper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script src="js/animation.js"></script>
     <script src="js/animation1.js"></script>
+    
     <script>
       var swiper = new Swiper(".swiper-container", {
         effect: "coverflow",
