--- a/site/index.html
+++ b/site/index.html
@@ -246,7 +246,7 @@
         <div class="row">
           <div class="col-sm-6">
             <h3>Technical Skills</h3>
-            <div class="progress">
+            <div class="progress" style="height: 8px;">
               <div
                 class="progress-bar progress-bar-striped progress-bar-animated"
                 role="progressbar"
@@ -254,34 +254,36 @@
                 aria-valuemin="0"
                 aria-valuemax="100"
                 style="width: 75%"
-              ></div>
+              >75%</div>
             </div>
           </div>
+
+
           <div class="col-sm-6">
             <h3>Professional Skills</h3>
             <div class="row">
               <div class="col-sm-6">
                 <div class="round" data-value=".90" data-size="100" data-thickness="6">
                   <strong></strong>
-                  <span><i class="fas fa-code"></i>Development</span>
+                  <span>Communication</span>
                 </div>
               </div>
               <div class="col-sm-6">
                 <div class="round" data-value=".90" data-size="100" data-thickness="6">
                   <strong></strong>
-                  <span><i class="fas fa-code"></i>Development</span>
+                  <span>Team Work</span>
                 </div>
               </div>
               <div class="col-sm-6">
                 <div class="round" data-value=".90" data-size="100" data-thickness="6">
                   <strong></strong>
-                  <span><i class="fas fa-code"></i>Development</span>
+                  <span>Creativity</span>
                 </div>
               </div>
               <div class="col-sm-6">
                 <div class="round" data-value=".90" data-size="100" data-thickness="6">
                   <strong></strong>
-                  <span><i class="fas fa-code"></i>Development</span>
+                  <span>Project Management</span>
                 </div>
               </div>
             </div>
