--- a/site/index.html
+++ b/site/index.html
@@ -263,25 +263,25 @@
             <h3>Professional Skills</h3>
             <div class="row">
               <div class="col-sm-6">
-                <div class="round" data-value=".90" data-size="100" data-thickness="6">
+                <div class="round mt-4" data-value=".90" data-size="100" data-thickness="6">
                   <strong></strong>
                   <span>Communication</span>
                 </div>
               </div>
               <div class="col-sm-6">
-                <div class="round" data-value=".90" data-size="100" data-thickness="6">
+                <div class="round mt-4" data-value=".90" data-size="100" data-thickness="6">
                   <strong></strong>
                   <span>Team Work</span>
                 </div>
               </div>
               <div class="col-sm-6">
-                <div class="round" data-value=".90" data-size="100" data-thickness="6">
+                <div class="round mt-4" data-value=".90" data-size="100" data-thickness="6">
                   <strong></strong>
                   <span>Creativity</span>
                 </div>
               </div>
               <div class="col-sm-6">
-                <div class="round" data-value=".90" data-size="100" data-thickness="6">
+                <div class="round mt-4" data-value=".90" data-size="100" data-thickness="6">
                   <strong></strong>
                   <span>Project Management</span>
                 </div>
