--- a/site/index.html
+++ b/site/index.html
@@ -215,84 +215,167 @@
     </div>
   </section>
 
-  <!-- ---------------------Skills----------------- -->
-  <section class="skills">
+  <!-- ---------------------Technical Skills----------------- -->
+  <section class="tech-skills">
     <div class="container pt-4">
-      <div class="row">
-        <div class="col-sm-6">
-          <h3>Technical Skills</h3>
-
-          <div>
-
-            <ul class="nav nav-tabs">
-              <li class="active"><a data-toggle="tab" href="#home">All Skills</a></li>
-              <li><a data-toggle="tab" href="#menu1">Ui/Ux</a></li>
-              <li><a data-toggle="tab" href="#menu2">Web Development</a></li>
-              <li><a data-toggle="tab" href="#menu3">Machine Learning</a></li>
-            </ul>
-
-            <div class="tab-content">
-
-              <div id="home" class="tab-pane active">
-                <div class="progress" style="height: 8px;">
-                  <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">75%</div>
-                </div>
-              </div>
-
-              <div id="menu1" class="tab-pane fade">
-                <div class="progress" style="height: 8px;">
-                  <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">75%</div>
-                </div>
-              </div>
-
-              <div id="menu2" class="tab-pane fade">
-                <div class="progress" style="height: 8px;">
-                  <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">75%</div>
-                </div>
-              </div>
-
-              <div id="menu3" class="tab-pane fade">
-                <div class="progress" style="height: 8px;">
-                  <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">75%</div>
-                </div>
-              </div>
-
+      <div>
+        <h3>Technical Skills</h3>
+        <div>
+          <nav>
+            <div class="nav nav-tabs justify-content-center" id="nav-tab" role="tablist">
+              <a class="nav-item nav-link active" id="nav-Programming-tab" data-toggle="tab" href="#nav-Programming" role="tab"
+                aria-controls="nav-Programming" aria-selected="true">Programming Language</a>
+              <a class="nav-item nav-link" id="nav-ml-tab" data-toggle="tab" href="#nav-ml" role="tab"
+                aria-controls="nav-ml" aria-selected="false">Machine Learning</a>
+              <a class="nav-item nav-link" id="nav-web-tab" data-toggle="tab" href="#nav-web" role="tab"
+                aria-controls="nav-web" aria-selected="false">Web Development</a>
+              <a class="nav-item nav-link" id="nav-uiux-tab" data-toggle="tab" href="#nav-uiux" role="tab"
+                aria-controls="nav-uiux" aria-selected="false">UI/UX</a>
+              <a class="nav-item nav-link" id="nav-other-tab" data-toggle="tab" href="#nav-other" role="tab"
+                aria-controls="nav-other" aria-selected="false">Other</a>
             </div>
+          </nav>
+          <div class="row">
+            <div class="col-sm-4"></div>
+            <div class="col-sm-4">
+              <div class="tab-content" id="nav-tabContent">
+
+                <div class="mt-3 tab-pane fade show active" id="nav-Programming" role="tabpanel" aria-labelledby="nav-Programming-tab">
+                  <h6>Python</h6>
+                  <div class="progress">
+                    <div class="progress-bar" id="bg" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                  </div>
+                  <h6>Java</h6>
+                  <div class="progress">
+                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%"></div>
+                  </div>
+                  <h6>MySQL</h6>
+                  <div class="progress">
+                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%"></div>
+                  </div>
+                  <h6>Android</h6>
+                  <div class="progress">
+                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%"></div>
+                  </div>
+                  <h6>C</h6>
+                  <div class="progress">
+                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%"></div>
+                  </div>
+                  <h6>Fluter</h6>
+                  <div class="progress">
+                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%"></div>
+                  </div>
+                </div>
+                  
+                <div class="mt-3 tab-pane fade" id="nav-ml" role="tabpanel" aria-labelledby="nav-profile-tab">
+                  <div class="progress">
+                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                  </div>
+                </div>
+
+                <div class="mt-3 tab-pane fade" id="nav-web" role="tabpanel" aria-labelledby="nav-web-tab">
+                  <h6>HTML 5</h6>
+                  <div class="progress">
+                    <div class="progress-bar" id="bg" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                  </div>
+                  <h6>CSS</h6>
+                  <div class="progress">
+                    <div class="progress-bar" id="bg" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                  </div>
+                  <h6>Bootstrap 4</h6>
+                  <div class="progress">
+                    <div class="progress-bar" id="bg" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                  </div>
+                  <h6>Jquery</h6>
+                  <div class="progress">
+                    <div class="progress-bar" id="bg" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                  </div>
+                  <h6>PhP</h6>
+                  <div class="progress">
+                    <div class="progress-bar" id="bg" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                  </div>
+                  <h6>Javascript</h6>
+                  <div class="progress">
+                    <div class="progress-bar" id="bg" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                  </div>
+                </div>
+
+                <div class="mt-3 tab-pane fade" id="nav-uiux" role="tabpanel" aria-labelledby="nav-uiux-tab">
+                  <h6>Adobe XD</h6>
+                  <div class="progress">
+                    <div class="progress-bar" id="bg" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
+                  </div>
+                  <h6>Figma</h6>
+                  <div class="progress">
+                    <div class="progress-bar" id="bg" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 80%"></div>
+                  </div>
+                  <h6>Prototype</h6>
+                  <div class="progress">
+                    <div class="progress-bar" id="bg" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
+                  </div>
+                  <h6>Marvel</h6>
+                  <div class="progress">
+                    <div class="progress-bar" id="bg" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%"></div>
+                  </div>
+                  <h6>Sketch</h6>
+                  <div class="progress">
+                    <div class="progress-bar" id="bg" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
+                  </div>
+                </div>
+
+                <div class="mt-3 tab-pane fade" id="nav-other" role="tabpanel" aria-labelledby="nav-other-tab">
+                  <h6>Word</h6>
+                  <div class="progress">
+                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                  </div>
+                  <h6>Excel</h6>
+                  <div class="progress">
+                    <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                  </div>
+                  <h6>Powerpoint</h6>
+                  <div class="progress">
+                      <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                  </div>
+                  <h6>Git</h6>
+                  <div class="progress">
+                      <div class="progress-bar " id="bg" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                  </div>
+                </div>
+
+              </div>
+            </div>
+
           </div>
         </div>
-
-
-        <div class="col-sm-6">
-          <h3>Professional Skills</h3>
-          <div class="row">
-            <div class="col-sm-6">
-              <div class="round mt-4" data-value=".90" data-size="100" data-thickness="6">
-                <strong></strong>
-                <span>Communication</span>
-              </div>
-            </div>
-            <div class="col-sm-6">
-              <div class="round mt-4" data-value=".90" data-size="100" data-thickness="6">
-                <strong></strong>
-                <span>Team Work</span>
-              </div>
-            </div>
-            <div class="col-sm-6">
-              <div class="round mt-4" data-value=".90" data-size="100" data-thickness="6">
-                <strong></strong>
-                <span>Creativity</span>
-              </div>
-            </div>
-            <div class="col-sm-6">
-              <div class="round mt-4" data-value=".90" data-size="100" data-thickness="6">
-                <strong></strong>
-                <span>Project Management</span>
-              </div>
-            </div>
+      </div>
+  </section>
+  <!-- ---------------------Professional Skills----------------- -->
+  <section class="prof-skills">
+    <div class="container">
+      <h3>Professional Skills</h3>
+      <div class="row">
+        <div class="col-sm-3">
+          <div class="round mt-4" data-value=".90" data-size="100" data-thickness="6">
+            <strong></strong>
+            <span>Communication</span>
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="round mt-4" data-value=".90" data-size="100" data-thickness="6">
+            <strong></strong>
+            <span>Team Work</span>
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="round mt-4" data-value=".90" data-size="100" data-thickness="6">
+            <strong></strong>
+            <span>Creativity</span>
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="round mt-4" data-value=".90" data-size="100" data-thickness="6">
+            <strong></strong>
+            <span>Project Management</span>
           </div>
         </div>
       </div>
